fix: slider arrows fixes on small devices

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1346,29 +1346,19 @@ input.invalid {
 
 @media screen and (max-width: 1750px) {
   .container__header {
-    margin-left: 320px; } }
-
-@media screen and (max-width: 1506px) {
-  .container__header {
-    margin-left: 220px; } }
+    margin: 0 auto; } }
 
 @media screen and (max-width: 1396px) {
-  .container__header {
-    margin-left: 180px; }
   .menu__logo {
     margin-right: 8rem; } }
 
 @media screen and (max-width: 1354px) {
-  .container__header {
-    margin-left: 160px; }
   .menu__logo {
     margin-right: 9rem; }
   .hero__social {
     left: 2rem; } }
 
 @media screen and (max-width: 1296px) {
-  .container__header {
-    margin-left: 100px; }
   .hero__social {
     left: 1rem; }
   .hero__content {
@@ -1380,8 +1370,7 @@ input.invalid {
 
 @media screen and (max-width: 1226px) {
   .container__header {
-    width: 92%;
-    margin: auto; }
+    width: 90%; }
   .container__services {
     width: 95%; }
   .hero {
@@ -1477,6 +1466,7 @@ input.invalid {
     .questions__col-42 {
       width: 100%;
       margin-bottom: 2rem;
+      padding-bottom: 2rem;
       background-color: #ffffff; }
     .questions__text {
       display: flex;
@@ -1624,10 +1614,16 @@ input.invalid {
       position: static; }
     .news__button {
       position: static; }
+  .feedback__card {
+    max-width: 40rem; }
   .swiper-button-next--news, .swiper-button-prev--news {
     bottom: 0;
     top: 75%;
     left: auto; } }
+
+@media screen and (max-width: 675px) {
+  .feedback__card {
+    max-width: 35rem; } }
 
 @media screen and (max-width: 576px) {
   .row {
@@ -1648,7 +1644,9 @@ input.invalid {
   .col-47 {
     width: 80%; }
   .news {
-    padding-top: 1rem; } }
+    padding-top: 1rem; }
+  .feedback__card {
+    max-width: 30rem; } }
 
 @media screen and (max-width: 514px) {
   html {
@@ -1671,7 +1669,9 @@ input.invalid {
   .video__play {
     margin-top: 24rem;
     width: 50px;
-    height: 50px; } }
+    height: 50px; }
+  .feedback__card {
+    max-width: 27rem; } }
 
 @media screen and (max-width: 418px) {
   .statistics__item {
@@ -1685,20 +1685,34 @@ input.invalid {
     .container__questions {
       width: 100%; }
   .hero__title {
-    font-size: 2.5rem;
+    font-size: 2rem;
     max-width: 25rem; }
   .hero__content {
     margin-left: 0rem; }
+  .news__text {
+    box-shadow: none; }
   .col-47 {
     width: 70%; }
   .feedback__author {
     max-width: 20rem; }
+  .feedback__card {
+    max-width: 24rem; }
+  .feedback__swiper-button-prev, .feedback__swiper-button-next {
+    width: 2.5rem; }
   div.invalid {
     font-size: 9px; } }
 
-@media screen and (max-width: 407px) {
-  .hero__title {
-    font-size: 2rem; } }
+@media screen and (max-width: 330px) {
+  .menu__contacts {
+    margin-right: 40px; }
+  .news__card {
+    margin-right: 0; }
+  .questions {
+    padding-bottom: 2rem; }
+    .questions__col-52 {
+      width: 90%; }
+    .questions__button {
+      align-self: center; } }
 
 @media screen and (min-height: 100px) and (max-height: 475px) and (orientation: landscape) and (max-device-width: 1200px) {
   .hero {
