--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -1,22 +1,12 @@
 @media screen and (max-width:  1750px)
   .container
     &__header
-      margin-left: 320px
-@media screen and (max-width:  1506px)
-  .container
-    &__header
-      margin-left: 220px
+      margin: 0 auto
 @media screen and (max-width:  1396px)
-  .container
-    &__header
-      margin-left: 180px  
   .menu
     &__logo
       margin-right: 8rem
 @media screen and (max-width:  1354px)
-  .container
-    &__header
-      margin-left: 160px  
   .menu
     &__logo
       margin-right: 9rem
@@ -24,9 +14,6 @@
     &__social
       left: 2rem                                      
 @media screen and (max-width:  1296px)
-  .container
-    &__header
-      margin-left: 100px
   .hero
     &__social
       left: 1rem
@@ -41,8 +28,7 @@
 @media screen and (max-width:  1226px)
   .container
     &__header
-      width: 92%
-      margin: auto
+      width: 90%
     &__services
       width: 95%
   .hero
@@ -144,6 +130,7 @@
     &__col-42 
       width: 100%
       margin-bottom: 2rem
+      padding-bottom: 2rem
       background-color: $light
     &__text
       display: flex
@@ -309,13 +296,20 @@
       position: static
     &__button
       position: static
+  .feedback
+    &__card
+      max-width: 40rem            
   .swiper
     &-button
       &-next, &-prev
         &--news
           bottom: 0
           top: 75%
-          left: auto                      
+          left: auto              
+@media screen and (max-width: 675px)  
+  .feedback
+    &__card
+      max-width: 35rem  
 @media screen and (max-width:  576px)
   .row
     justify-content: center
@@ -338,7 +332,10 @@
   .col-47
     width: 80%
   .news
-    padding-top: 1rem        
+    padding-top: 1rem 
+  .feedback
+    &__card
+      max-width: 30rem                
 @media screen and (max-width:  514px)
   html
     font-size: 12px
@@ -360,11 +357,14 @@
     &__play
       margin-top: 24rem
       width: 50px
-      height: 50px   
+      height: 50px
+  .feedback
+    &__card
+      max-width: 27rem            
 @media screen and (max-width:  418px)
   .statistics
     &__item
-      width: 10.3rem      
+      width: 10.3rem       
 @media screen and (max-width:  407px)
   html
     font-size: 10px
@@ -374,21 +374,37 @@
       width: 100%
   .hero   
     &__title
-      font-size: 2.5rem
+      font-size: 2rem
       max-width: 25rem  
     &__content
       margin-left: 0rem
+  .news
+    &__text
+      box-shadow: none      
   .col-47
     width: 70%
   .feedback
     &__author       
       max-width: 20rem
+    &__card
+      max-width: 24rem  
+    &__swiper-button-prev, &__swiper-button-next 
+      width: 2.5rem
   div.invalid
     font-size: 9px   
-@media screen and (max-width:  407px)
-  .hero   
-    &__title
-      font-size: 2rem
+@media screen and (max-width:  330px)
+  .menu
+    &__contacts
+      margin-right: 40px
+  .news
+    &__card
+      margin-right: 0
+  .questions
+    padding-bottom: 2rem
+    &__col-52
+      width: 90%
+    &__button
+      align-self: center          
 @media screen and (min-height:  100px) and (max-height:  475px) and (orientation : landscape) and (max-device-width: 1200px)
   .hero
     background: $light   
